# picasso_II

./: .env.example  .gitignore  README.md  create.py  docker-compose.yml  pyproject.toml
.github/workflows/: test_task_workflow.yml
backend/: dump.json
backend/api/: urls.py
backend/backend/: constants.py  settings.py  urls.py
backend/bicycles/: admin.py  google_services.py  models.py  serializers.py  spreadsheets.py  tasks.py  views.py
backend/bicycles/migrations/: 0001_initial.py  0002_initial.py
backend/users/: models.py  serializers.py  views.py
backend/users/migrations/: 0001_initial.py
docker/backend/: .dockerignore  Dockerfile  server-entrypoint.sh
tests/: conftest.py  test_auth.py  test_rent.py  test_settings.py
tests/fixtures/: fixture_data.py  fixture_user.py
